fix hover effect on small screens

--- a/src/components/language-switcher/lang-switcher.scss
+++ b/src/components/language-switcher/lang-switcher.scss
@@ -20,33 +20,11 @@
             padding: 5px;
             // width: 200px;
             transition: all 0.3s;
-            &:hover {
-                cursor: pointer;
-                background-color: $secondary_light_1;
-            }
+
         }
     }
 
-    &_1{
-        background-color: $primary_dark_2;
-        ul {
-            li {
-                &:hover {
-                    background-color: $secondary_dark_2;  
-                }
-            }
-        }
-    }
-    &_2{
-        background-color: $primary_dark_3;
-        ul {
-            li {
-                &:hover {
-                    background-color: $secondary_light_3;  
-                }
-            }
-        }
-    }
+
    
 
     &_active {
